# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: run-linter.yml
brain_games/: .evenodd_game.py.swo  __init__.py  cli.py  engine.py  evenodd_game.py  game_engine.py  keys.py
brain_games/games/: calc.py  calc_game.py  evenodd.py  evenodd_game.py  gcd.py  gcd_game.py  prime.py  prime_game.py  progression.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
