[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Play the Brain games"
authors = ["Mariia Bilinska <mariiaklochko@gmail.com>"]
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/Maroosha/python-project-lvl1"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
